# utxo-monitor

./: .env.sample  .gitignore  Cargo.toml  README.md
migrations/2025-02-05-090345_create_gen_input_transactions/: down.sql  up.sql
src/: db.rs  db_operations.rs  main.rs  models.rs  nostr_notify.rs  routes.rs  schema.rs  tests.rs
www/: index.html
